--- a/style.css
+++ b/style.css
@@ -1,8 +1,110 @@
+body,
+ul,
+h1,
+h2,
+p {
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  list-style-type: none;
+}
+
+body {
+  background-color: #0e0e0e;
+  background-image: url(images/bg.png);
+  color: white;
+}
+
+.wrapper {
+  width: 1200px;
+  margin: 0 auto;
+}
 
 
 
+.timeline {
+  padding: 50px 0;
+  margin: 0 -40px;
+  position: relative;
+}
 
+.timeline:before {
+  content: ' ';
+  background-color: dodgerblue;
+  position: absolute;
+  left: 50%;
+  top: 0;
+  bottom: 0;
+  margin: 100px 0 -100px;
+  width: 6px;
+  transform: translateX(-50%);
+}
 
+.timeline-item {
+  width: 50%;
+  padding: 0 40px;
+  box-sizing: border-box;
+  position: relative;
+}
 
+.timeline-item:before {
+  content: ' ';
+  background-color: #0e0e0e;
+  background-image: url(images/bg.png);
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 6px solid dodgerblue;
+  margin: 50px -20px;
+}
 
+.timeline-item:after {
+  content: ' ';
+  background-color: dodgerblue;
+  position: absolute;
+  right: 0;
+  width: 40px;
+  height: 5px;
+  top: 65px;
+  margin: 0px 30px;
+}
 
+.timeline-item:nth-child(even) {
+  margin-left: auto;
+  margin-top: -120px;
+  margin-bottom: -120px;
+}
+
+.timeline-item:nth-child(even):before,
+.timeline-item:nth-child(even):after {
+  left: 0;
+}
+
+.tour {
+  background-color: #000;
+  min-height: 400px;
+}
+
+.tour-cover {
+  width: 100%;
+}
+
+.tour-contents {
+  padding: 30px;
+}
+
+.tour-contents h2{
+  margin-bottom: 20px;
+}
+
+.tour-contents h2 strong{
+  display: block;
+}
+
+.tour-contents p{
+  color: #999999;
+}
