--- a/style.css
+++ b/style.css
@@ -1,110 +1,134 @@
-body,
-ul,
-h1,
-h2,
-p {
-  margin: 0;
-  padding: 0;
+/* CSS Reset */
+body, p {
+	margin: 0;
 }
 
-li {
-  list-style-type: none;
+a {
+	text-decoration: none;
+	color: inherit;
 }
 
+/* Layouts */
+.l_wrapper {
+	width: 960px;
+	margin: 0 auto;
+}
+
+.l_sidebar {
+	float: right;
+	margin-left: 20px;
+	width: 300px;
+}
+
+.l_main {
+	overflow: hidden;
+}
+
+
+/* Commons */
+.clearfix:after {
+	content: ' ';
+	display: table;
+}
+
+/* Buttons */
+.button {
+	background-color: #333;
+	color: white;
+	padding: 0.5em 1em;
+	display: inline-block;	
+}
+
+.button_block {
+	display: block;
+	text-align: center;	
+}
+
+.button_important {
+	background-color: orangered;
+}
+
+
+/* Util */
+.mb_5 { margin-bottom: 5px; }
+
+
+/* Components */
 body {
-  background-color: #0e0e0e;
-  background-image: url(images/bg.png);
-  color: white;
+	background-image: url(images/bg.png);
+	color: #999;
 }
 
-.wrapper {
-  width: 1200px;
-  margin: 0 auto;
+.contents {
+	padding: 40px 0;
+}
+
+.checkout {
+	background-color: #222;
+}
+
+.checkout-section {
+	margin: 20px;
+}
+
+.video {
+	background-color: dodgerblue;	
+	padding-top: 56.25%;
+	position: relative;
+}
+
+.video-iframe {
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+}
+
+.price {
+	font-size: 40px;
+	font-weight: bold;
+	color: dodgerblue;
+}
+
+.price-discount {
+	font-weight: normal;
+	color: #999;
+	font-size: 0.5em;
+	position: relative;
+}
+
+.price-discount:before {
+	content: ' ';
+	position: absolute;
+	left: 0;
+	right: 0;
+	height: 2px;
+	bottom: 0.6em;
+	opacity: 0.3;
+	background-color: white;
+}
+
+.course-cover {
+	background-image: url(images/cover.png);
+}
+
+.course-section {
+	background-color: orange;
+	margin: 20px 0;
 }
 
 
 
-.timeline {
-  padding: 50px 0;
-  margin: 0 -40px;
-  position: relative;
-}
 
-.timeline:before {
-  content: ' ';
-  background-color: dodgerblue;
-  position: absolute;
-  left: 50%;
-  top: 0;
-  bottom: 0;
-  margin: 100px 0 -100px;
-  width: 6px;
-  transform: translateX(-50%);
-}
 
-.timeline-item {
-  width: 50%;
-  padding: 0 40px;
-  box-sizing: border-box;
-  position: relative;
-}
 
-.timeline-item:before {
-  content: ' ';
-  background-color: #0e0e0e;
-  background-image: url(images/bg.png);
-  position: absolute;
-  right: 0;
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  border: 6px solid dodgerblue;
-  margin: 50px -20px;
-}
 
-.timeline-item:after {
-  content: ' ';
-  background-color: dodgerblue;
-  position: absolute;
-  right: 0;
-  width: 40px;
-  height: 5px;
-  top: 65px;
-  margin: 0px 30px;
-}
 
-.timeline-item:nth-child(even) {
-  margin-left: auto;
-  margin-top: -120px;
-  margin-bottom: -120px;
-}
 
-.timeline-item:nth-child(even):before,
-.timeline-item:nth-child(even):after {
-  left: 0;
-}
 
-.tour {
-  background-color: #000;
-  min-height: 400px;
-}
 
-.tour-cover {
-  width: 100%;
-}
 
-.tour-contents {
-  padding: 30px;
-}
 
-.tour-contents h2{
-  margin-bottom: 20px;
-}
 
-.tour-contents h2 strong{
-  display: block;
-}
 
-.tour-contents p{
-  color: #999999;
-}
